# cmake_learn

01-base/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hello_world
01-base/A-hello/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp
01-base/B-hello/: CMakeLists.txt
01-base/C-hello/: CMakeLists.txt
01-base/C-hello/src/: Hello.cpp
01-base/D-shared-library/: CMakeLists.txt
01-base/E-installing/: CMakeLists.txt
01-base/F-build-type/: CMakeLists.txt
01-base/G-compile-flags/: CMakeLists.txt
01-base/H-third-party-library/: CMakeLists.txt
01-base/K-imported-target/: CMakeLists.txt
02-sub-project/: CMakeLists.txt
02-sub-project/subbinary/: CMakeLists.txt
02-sub-project/sublibrary1/: CMakeLists.txt
02-sub-project/sublibrary2/: CMakeLists.txt
03-code-generation/: CMakeLists.txt  path.h  ver.h
04-static-analysis/clang-analyzer/: CMakeLists.txt
04-static-analysis/clang-analyzer/subproject1/: main1.cpp
07-package-management/D-conan/: CMakeLists.txt  conanfile.txt
